[gd_scene load_steps=20 format=3 uid="uid://jwcr4f8p5ger"]

[ext_resource type="Script" uid="uid://d2ppn6fnm58kp" path="res://Nodes/abilitybubbles.gd" id="1_enshr"]
[ext_resource type="Texture2D" uid="uid://u2s3dplfajet" path="res://Assets/Sprites/Assets4.png" id="1_g68sb"]
[ext_resource type="Texture2D" uid="uid://dl11h76ekh70r" path="res://Assets/Sprites/Assets7.png" id="2_2jead"]
[ext_resource type="Texture2D" uid="uid://bynaanpkf2x1o" path="res://Assets/Sprites/Assets5.png" id="2_imdfa"]
[ext_resource type="Texture2D" uid="uid://cbwoufkwa3ery" path="res://Assets/Sprites/Assets6.png" id="3_enshr"]
[ext_resource type="Texture2D" uid="uid://bgoicyfsj4kwn" path="res://Assets/Sprites/Assets9.png" id="5_107ys"]
[ext_resource type="Texture2D" uid="uid://dgwtd3tvcxuh8" path="res://Assets/Sprites/Assets8.png" id="6_ji0y8"]
[ext_resource type="AudioStream" uid="uid://dbrmrg2mscqmh" path="res://Assets/Sprites/SoundsCrate-Stylized_Bubble_Pop_5.wav" id="8_ji0y8"]
[ext_resource type="AudioStream" uid="uid://cyyqhdluw5is0" path="res://Assets/Sprites/SoundsCrate-Stylized_Bubble_Pop_4.mp3" id="9_tuelp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g68sb"]
radius = 217.083

[sub_resource type="AtlasTexture" id="AtlasTexture_tuelp"]
atlas = ExtResource("2_2jead")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8aye"]
atlas = ExtResource("3_enshr")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljp86"]
atlas = ExtResource("2_imdfa")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_w560e"]
atlas = ExtResource("5_107ys")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_io12i"]
atlas = ExtResource("6_ji0y8")
region = Rect2(0, 0, 70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_6242v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuelp")
}],
"loop": true,
"name": &"a_Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8aye")
}],
"loop": true,
"name": &"a_Health",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljp86")
}],
"loop": true,
"name": &"a_Speed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w560e")
}],
"loop": true,
"name": &"a_Stamina",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_io12i")
}],
"loop": true,
"name": &"a_Weapon",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_g68sb"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.53333, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.933333, 2.03, 2.95),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.10472, 0.0, -0.10472, 0.10472]
}

[sub_resource type="Animation" id="Animation_imdfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imdfa"]
_data = {
&"Idle": SubResource("Animation_g68sb"),
&"RESET": SubResource("Animation_imdfa")
}

[node name="Abilitybubbles" type="Node2D"]
script = ExtResource("1_enshr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g68sb")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(6.74286, 6.74286)
texture = ExtResource("1_g68sb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
scale = Vector2(7.15, 7.15)
sprite_frames = SubResource("SpriteFrames_6242v")
animation = &"a_Weapon"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_imdfa")
}
autoplay = "Idle"

[node name="POP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ji0y8")

[node name="Highlight" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tuelp")

[node name="DeHighlight" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tuelp")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="finished" from="POP" to="." method="_on_pop_finished"]
